<resources>
    <string name="app_name">BetaChat</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="account_settings">Account Settings</string>
    <string name="save">Save</string>
    <string name="space" />
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">Confirm</string>
    <string name="codose">\@codose_</string>
</resources>
